--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,109 +1,106 @@
 <footer class="bg-secondd-300 py-5 px-5">
-    <div
-        class="container flex flex-col lg:m-auto lg:flex-row lg:flex-wrap xl:m-auto xl:w-11/12 xl:mt-10"
-    >
-        <div class="mb-7 lg:w-1/2">
-            <span class="block mb-3"
-                ><img
-                    src="/public/wedding-invites.png"
-                    class="block w-1/2 lg:w-1/4"
-                /></span
-            >
-            <a href="milto:love@weddinginvites.com" class="block flex mb-2">
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke-width="1.5"
-                    stroke="currentColor"
-                    class="w-6 h-6 mr-1"
-                >
-                    <path
-                        stroke-linecap="round"
-                        d="M16.5 12a4.5 4.5 0 11-9 0 4.5 4.5 0 019 0zm0 0c0 1.657 1.007 3 2.25 3S21 13.657 21 12a9 9 0 10-2.636 6.364M16.5 12V8.25"
-                    ></path>
-                </svg>
-                <span>love@weddinginvites.com</span>
-            </a>
-            <p class="block mb-5 flex">
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke-width="1.5"
-                    stroke="currentColor"
-                    class="w-6 h-6 mr-1"
-                >
-                    <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        d="M15 10.5a3 3 0 11-6 0 3 3 0 016 0z"></path>
-                    <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z"
-                    ></path>
-                </svg>
+  <div
+    class="container flex flex-col lg:m-auto lg:flex-row lg:flex-wrap xl:m-auto xl:w-11/12 xl:mt-10"
+  >
+    <div class="mb-7 lg:w-1/2">
+      <span class="block mb-3"
+        ><img src="/wedding-invites.png" class="block w-1/2 lg:w-1/4" /></span
+      >
+      <a href="milto:love@weddinginvites.com" class="flex mb-2">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-6 h-6 mr-1"
+        >
+          <path
+            stroke-linecap="round"
+            d="M16.5 12a4.5 4.5 0 11-9 0 4.5 4.5 0 019 0zm0 0c0 1.657 1.007 3 2.25 3S21 13.657 21 12a9 9 0 10-2.636 6.364M16.5 12V8.25"
+          ></path>
+        </svg>
+        <span>love@weddinginvites.com</span>
+      </a>
+      <p class="mb-5 flex">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-6 h-6 mr-1"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M15 10.5a3 3 0 11-6 0 3 3 0 016 0z"></path>
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z"
+          ></path>
+        </svg>
 
-                <span>Cancún, Quintana Roo. México</span>
-            </p>
-            <div class="flex space-x-2">
-                <a href="#">
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="32"
-                        height="32"
-                        viewBox="0 0 24 24"
-                        ><path
-                            fill="#ffffff"
-                            d="M12 2.04c-5.5 0-10 4.49-10 10.02c0 5 3.66 9.15 8.44 9.9v-7H7.9v-2.9h2.54V9.85c0-2.51 1.49-3.89 3.78-3.89c1.09 0 2.23.19 2.23.19v2.47h-1.26c-1.24 0-1.63.77-1.63 1.56v1.88h2.78l-.45 2.9h-2.33v7a10 10 0 0 0 8.44-9.9c0-5.53-4.5-10.02-10-10.02Z"
-                        ></path></svg
-                    >
-                </a>
-                <a href="#">
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="32"
-                        height="32"
-                        viewBox="0 0 24 24"
-                        ><path
-                            fill="#ffffff"
-                            d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8A1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5a5 5 0 0 1-5 5a5 5 0 0 1-5-5a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3a3 3 0 0 0 3 3a3 3 0 0 0 3-3a3 3 0 0 0-3-3Z"
-                        ></path></svg
-                    >
-                </a>
-            </div>
-        </div>
-
-        <div class="lg:w-1/2">
-            <b class="block mb-3 lg:mt-10">Links</b>
-            <ul
-                class="flex flex-col space-y-2 text-lg text-white mb-5 lg:flex-row lg:flex-wrap"
-            >
-                <li class="lg:basis-1/2">
-                    <a href="/">Invitaciones Digitales</a>
-                </li>
-                <li class="lg:basis-1/2"><a href="/planes">Planes</a></li>
-                <li class="lg:basis-1/2">
-                    <a href="/caracteristicas">Características</a>
-                </li>
-                <li class="lg:basis-1/2"><a href="/">Contacto</a></li>
-                <li class="lg:basis-1/2">
-                    <a href="/">Preguntas Frecuentes</a>
-                </li>
-                <li class="lg:basis-1/2">
-                    <a href="/">Políticas de Privacidad</a>
-                </li>
-                <li class="lg:basis-1/2">
-                    <a href="/wedding-planer">Wedding Planer</a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="lg:w-full">
-            <p class="text-sm">
-                © 2023 Wedding Invites. Todos los derechos reservados.
-            </p>
-        </div>
+        <span>Cancún, Quintana Roo. México</span>
+      </p>
+      <div class="flex space-x-2">
+        <a href="#">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="32"
+            height="32"
+            viewBox="0 0 24 24"
+            ><path
+              fill="#ffffff"
+              d="M12 2.04c-5.5 0-10 4.49-10 10.02c0 5 3.66 9.15 8.44 9.9v-7H7.9v-2.9h2.54V9.85c0-2.51 1.49-3.89 3.78-3.89c1.09 0 2.23.19 2.23.19v2.47h-1.26c-1.24 0-1.63.77-1.63 1.56v1.88h2.78l-.45 2.9h-2.33v7a10 10 0 0 0 8.44-9.9c0-5.53-4.5-10.02-10-10.02Z"
+            ></path></svg
+          >
+        </a>
+        <a href="#">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="32"
+            height="32"
+            viewBox="0 0 24 24"
+            ><path
+              fill="#ffffff"
+              d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8A1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5a5 5 0 0 1-5 5a5 5 0 0 1-5-5a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3a3 3 0 0 0 3 3a3 3 0 0 0 3-3a3 3 0 0 0-3-3Z"
+            ></path></svg
+          >
+        </a>
+      </div>
     </div>
+
+    <div class="lg:w-1/2">
+      <b class="block mb-3 lg:mt-10">Links</b>
+      <ul
+        class="flex flex-col space-y-2 text-lg text-white mb-5 lg:flex-row lg:flex-wrap"
+      >
+        <li class="lg:basis-1/2">
+          <a href="/">Invitaciones Digitales</a>
+        </li>
+        <li class="lg:basis-1/2"><a href="/planes">Planes</a></li>
+        <li class="lg:basis-1/2">
+          <a href="/caracteristicas">Características</a>
+        </li>
+        <li class="lg:basis-1/2"><a href="/">Contacto</a></li>
+        <li class="lg:basis-1/2">
+          <a href="/">Preguntas Frecuentes</a>
+        </li>
+        <li class="lg:basis-1/2">
+          <a href="/">Políticas de Privacidad</a>
+        </li>
+        <li class="lg:basis-1/2">
+          <a href="/wedding-planer">Wedding Planer</a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="lg:w-full">
+      <p class="text-sm">
+        © 2023 Wedding Invites. Todos los derechos reservados.
+      </p>
+    </div>
+  </div>
 </footer>
