--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,78 +1,69 @@
 <header class="lg:bg-secondd-300">
+  <div
+    class="container flex flex-col relative lg:mx-auto lg:flex-row xl:w-11/12 xl:m-auto"
+  >
     <div
-        class="container flex flex-col relative lg:mx-auto lg:flex-row xl:w-11/12 xl:m-auto"
+      class="w-full bg-secondd-300 py-1 px-5 flex justify-between items-center lg:w-1/4 lg:bg-transparent"
     >
-        <div
-            class="w-full bg-secondd-300 py-1 px-5 flex justify-between items-center lg:w-1/4 lg:bg-transparent"
+      <a href="/"
+        ><img src="/wedding-invites.png" class="w-1/3 lg:w-1/2" alt="" /></a
+      >
+      <a class="lg:hidden" id="nav"
+        ><svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon icon-tabler icon-tabler-menu-2"
+          width="44"
+          height="44"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="#ffffff"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"
         >
-            <a href="/"
-                ><img
-                    src="/public/wedding-invites.png"
-                    class="w-1/3 lg:w-1/2"
-                    alt=""
-                /></a
-            >
-            <a class="lg:hidden" id="nav"
-                ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="icon icon-tabler icon-tabler-menu-2"
-                    width="44"
-                    height="44"
-                    viewBox="0 0 24 24"
-                    stroke-width="1.5"
-                    stroke="#ffffff"
-                    fill="none"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                >
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                    <path d="M4 6l16 0"></path>
-                    <path d="M4 12l16 0"></path>
-                    <path d="M4 18l16 0"></path>
-                </svg></a
-            >
-        </div>
-        <nav
-            class="w-full bg-secondd-700 py-5 px-5 absolute top-[95%] overflow-visible z-[900] hidden lg:block lg:w-3/4 lg:relative lg:bg-transparent"
-            id="nav-list"
-        >
-            <ul
-                class="flex flex-col space-y-2 text-white lg:flex-row lg:justify-end lg:items-center lg:h-full lg:space-x-5 lg:text-black"
-            >
-                <li>
-                    <a href="/planes" class="lg:text-xl">Planes</a>
-                </li>
-                <li>
-                    <a href="/caracteristicas" class="lg:text-xl"
-                        >Características</a
-                    >
-                </li>
-                <li>
-                    <a href="/wedding-planer" class="lg:text-xl"
-                        >Wedding Planer</a
-                    >
-                </li>
-                <li>
-                    <a href="/contacto" class="lg:text-xl">Contacto</a>
-                </li>
-                <!-- <li>
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <path d="M4 6l16 0"></path>
+          <path d="M4 12l16 0"></path>
+          <path d="M4 18l16 0"></path>
+        </svg></a
+      >
+    </div>
+    <nav
+      class="w-full bg-secondd-700 py-5 px-5 absolute top-0 overflow-visible z-[900] hidden lg:block lg:w-3/4 lg:relative lg:bg-transparent"
+      id="nav-list"
+    >
+      <ul
+        class="flex flex-col text-white lg:flex-row lg:justify-end lg:items-center lg:h-full lg:space-x-5 lg:text-black"
+      >
+        <li>
+          <a href="/planes" class="lg:text-xl">Planes</a>
+        </li>
+        <li>
+          <a href="/caracteristicas" class="lg:text-xl">Características</a>
+        </li>
+        <li>
+          <a href="/wedding-planer" class="lg:text-xl">Wedding Planer</a>
+        </li>
+        <li>
+          <a href="/contacto" class="lg:text-xl">Contacto</a>
+        </li>
+        <!-- <li>
                     <a
                         href="planes"
                         class="block bg-secondd-700 text-white w-1/2 px-5 py-3 font-bold rounded-md text-center lg:text-xl lg:w-full"
                         >Crear Invitación</a
                     >
                 </li> -->
-            </ul>
-        </nav>
-    </div>
+      </ul>
+    </nav>
+  </div>
 </header>
 <script>
-    const nav = document.querySelector("#nav");
-    if (nav) {
-        const navList = document.querySelector("#nav-list");
-        nav.addEventListener("click", (e) => {
-            navList?.classList.toggle("hidden");
-        });
-    }
-    console.log("hELLO!");
+  const nav = document.querySelector("#nav");
+  if (nav) {
+    const navList = document.querySelector("#nav-list");
+    nav.addEventListener("click", (e) => {
+      navList?.classList.toggle("hidden");
+    });
+  }
 </script>
