--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -20,7 +20,7 @@
             d="M16.5 12a4.5 4.5 0 11-9 0 4.5 4.5 0 019 0zm0 0c0 1.657 1.007 3 2.25 3S21 13.657 21 12a9 9 0 10-2.636 6.364M16.5 12V8.25"
           ></path>
         </svg>
-        <span>love@weddinginvites.com</span>
+        <span>love@weddinvites.com</span>
       </a>
       <p class="mb-5 flex">
         <svg
@@ -98,9 +98,7 @@
     </div>
 
     <div class="lg:w-full">
-      <p class="text-sm">
-        © 2023 Wedding Invites. Todos los derechos reservados.
-      </p>
+      <p class="text-sm">© 2023 Weddinvites. Todos los derechos reservados.</p>
     </div>
   </div>
 </footer>
