--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,9 @@ import Plan from "../components/Plan.astro";
 import CardHow from "../components/CardHow.astro";
 import CardBenefit from "../components/CardBenefit.astro";
 import CardReview from "../components/CardReview.astro";
-import Faqs from "../components/Faqs";
+import Faqs from "../components/home/Faqs";
+import HowTo from "../components/home/HowTo";
+import Highlights from "../components/home/Highlights";
 ---
 
 <Layout title="Diseña tu Invitación Digital | Wedding Invites">
@@ -19,11 +21,11 @@ import Faqs from "../components/Faqs";
         <h1
           class="block text-center leading-normal mb-14 text-white font-paris md:text-[3.75rem] lg:mb-1"
         >
-          Creamos tu Invitación Digital
+          ¡Bienvenidos a Weddinvites!
         </h1>
         <p class="text-2xl text-center pt-5 md:text-white md:text-3xl">
-          Crea, personaliza y comparte la <b>invitación digital</b>
-           del mejor día de tu vida a través de <b>Wedding Invites</b>
+          El destino perfecto para transformar tus invitaciones de boda en
+          experiencias digitales únicas.
         </p>
       </div>
     </section>
@@ -32,17 +34,47 @@ import Faqs from "../components/Faqs";
       class="container py-5 px-5 md:flex md:flex-wrap lg:m-auto lg:justify-between lg:mt-10 xl:m-auto xl:w-11/12 xl:mt-10"
     >
       <article
-        class="bg-secondd-600 py-5 px-5 rounded-md mb-6 md:w-full lg:w-[32%]"
+        class="bg-secondd-600 rounded-md mb-6 md:w-full lg:w-1/4 flex items-center justify-center"
       >
-        <h2 class="text-white uppercase mb-5">¿Invitación Digital?</h2>
-        <p class="text-xl text-white">
-          Si, los tiempos cambian y las costumbres evolucionan, crea tu <b
-            >Invitación Digital</b
-          > dotada de características únicas y compartela fácilmente con tus
-          invitados.
+        <h2 class="w-min text-white uppercase text-[2rem]">
+          Invitaciones digitales para celebraciones inolvidables
+        </h2>
+      </article>
+      <article class="mb-6 px-4 md:w-full md:pr-2 lg:w-3/4">
+        <p class="mb-3">
+          Descubre la magia de nuestras <strong
+            >invitaciones digitales para bodas</strong
+          >, diseñadas para cautivar tus sentidos y reflejar tu historia de amor
+          de manera única. En Weddinvites, la creatividad es nuestro sello
+          distintivo.
+        </p>
+        <p class="mb-3">
+          Imagina tu boda con invitaciones que van más allá de lo convencional.
+          Enamórate de nuestras creaciones, desde las clásicas hasta las más
+          vanguardistas. Ofrecemos el diseño de <strong
+            >invitaciones digitales para bodas</strong
+          > que captura la esencia de tu amor.
+        </p>
+        <p class="mb-3">
+          Relájate con la comodidad de nuestras <strong
+            >invitaciones electrónicas de boda</strong
+          >. En un mundo acelerado, Weddinvites te ofrece una solución fácil de
+          usar, accesible en cualquier momento y lugar. Simplifica tu proceso de
+          envío de invitaciones y da el primer paso hacia una boda inolvidable.
+        </p>
+        <p>
+          En Weddinvites, nos apasiona ofrecer <strong
+            >invitaciones virtuales para bodas</strong
+          > de la más alta calidad. Nuestro compromiso con el <strong
+            >diseño elegante</strong
+          > y la atención meticulosa a los detalles nos posiciona como líderes
+          en el mercado de <strong
+            >invitaciones digitales elegantes para bodas</strong
+          >. Personalizamos cada invitación para reflejar la individualidad de
+          cada pareja.
         </p>
       </article>
-      <article class="mb-6 md:w-1/2 md:pr-2 lg:w-[32%]">
+      <!-- <article class="mb-6 md:w-1/2 md:pr-2 lg:w-[32%]">
         <h4 class="text-secondd-600 mb-2 lg:mt-7">Eco friendly</h4>
         <p>
           Olvida los daños ambientales por la utilización del papel y tintas en
@@ -55,17 +87,27 @@ import Faqs from "../components/Faqs";
           Olvidate de los costosos procesos de impresión, modifica y envía tu
           Invitación Digital tantas veces como desees.
         </p>
-      </article>
+      </article> -->
     </section>
 
     <section
       class="container py-5 px-5 md:flex md:flex-wrap md:justify-between lg:m-auto xl:m-auto xl:w-11/12 xl:mt-10"
     >
       <article class="mb-6 lg:text-center xl:w-full xl:text-center">
-        <h2 class="text-secondd-950 uppercase">Nuestros Planes</h2>
+        <h2 class="text-secondd-950 uppercase mb-5">Nuestros Planes</h2>
+        <p class="mb-3">
+          Eleva tu boda a nuevas alturas con nuestras <strong
+            >invitaciones digitales para bodas</strong
+          >. Descubre la magia de Weddinvites y comienza tu viaje hacia una
+          experiencia única de <strong>invitaciones digitales</strong>.
+          Sumérgete en nuestros planes y descubre cómo transformar el camino
+          hacia una boda inolvidable.
+        </p>
         <p>
-          Contamos con 2 planes que cubren a la perfección desde tu necesidad
-          más básica hasta aquello que no imaginaste pudieses necesitar.
+          <strong
+            >¡Haz que tu celebración comience con una invitación que refleje tu
+            estilo y valores!</strong
+          >
         </p>
       </article>
       <Plan name="Plan Amor" pricing="0" label="Plan gratuito">
@@ -193,7 +235,7 @@ import Faqs from "../components/Faqs";
       </Plan>
       <Plan
         name="Plan Pasión"
-        pricing="2,350"
+        pricing="1,350"
         label="Pruébalo gratis por 15 días"
       >
         <ul slot="includes">
@@ -318,6 +360,133 @@ import Faqs from "../components/Faqs";
           </li>
         </ul>
       </Plan>
+      <Plan
+        name="Plan Eternidad"
+        pricing="2,450"
+        label="Pruébalo gratis por 15 días"
+      >
+        <ul slot="includes">
+          <li class="py-2 border-b-2 border-brand2-100 flex">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6 text-primary-500 mr-1"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+              ></path>
+            </svg>
+            <span>Auto gestionable</span>
+          </li>
+          <li class="py-2 border-b-2 border-brand2-100 flex">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6 text-primary-500 mr-1"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+              ></path>
+            </svg>
+            <span>Cuenta regresiva</span>
+          </li>
+          <li class="py-2 border-b-2 border-brand2-100 flex">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6 text-primary-500 mr-1"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+              ></path>
+            </svg>
+            <span>Invitados</span>
+          </li>
+          <li class="py-2 border-b-2 border-brand2-100 flex">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6 text-primary-500 mr-1"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+              ></path>
+            </svg>
+            <span>Ajustes generales</span>
+          </li>
+          <li class="py-2 border-b-2 border-brand2-100 flex">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6 text-secondd-600 mr-1"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+              ></path>
+            </svg>
+            <span>Mapa de ubicación</span>
+          </li>
+          <li class="py-2 border-b-2 border-brand2-100 flex">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6 text-secondd-600 mr-1"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+              ></path>
+            </svg>
+            <span>Mesa de regalos</span>
+          </li>
+          <li class="py-2 flex">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6 text-secondd-600 mr-1"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+              ></path>
+            </svg>
+            <span>Notificaciones Push</span>
+          </li>
+        </ul>
+      </Plan>
     </section>
 
     <section
@@ -329,7 +498,9 @@ import Faqs from "../components/Faqs";
         ¿Cómo funciona?
       </h2>
 
-      <CardHow
+      <HowTo client:only="react" />
+
+      <!-- <CardHow
         title="Crea una cuenta"
         content="Crea una cuenta en tan solo un par de click."
       >
@@ -411,24 +582,29 @@ import Faqs from "../components/Faqs";
             d="M7.217 10.907a2.25 2.25 0 100 2.186m0-2.186c.18.324.283.696.283 1.093s-.103.77-.283 1.093m0-2.186l9.566-5.314m-9.566 7.5l9.566 5.314m0 0a2.25 2.25 0 103.935 2.186 2.25 2.25 0 00-3.935-2.186zm0-12.814a2.25 2.25 0 103.933-2.185 2.25 2.25 0 00-3.933 2.185z"
           ></path>
         </svg>
-      </CardHow>
+      </CardHow> -->
     </section>
 
     <section
-      class="container py-5 px-5 mt-10 mb-10 lg:m-auto xl:m-auto xl:w-11/12 xl:mt-10"
+      class="container py-5 px-5 mt-10 mb-10 lg:m-auto xl:m-auto xl:w-11/12 xl:mt-12"
     >
       <article class="md:flex md:flex-wrap md:justify-between">
         <h2 class="text-secondd-950 mb-5 lg:w-full lg:text-center">
           Beneficios de la Invitación Digital
         </h2>
         <p class="mb-10 lg:w-full lg:text-center">
-          Usar una Inivatción Digital tiene beneficios en todos los sentidos,
-          ecologicos, económicos, gestionables, etc
+          Te invitamos a explorar los beneficios excepcionales de nuestras <strong
+            >invitaciones digitales para bodas</strong
+          >. Desde la comodidad hasta la sostenibilidad, cada aspecto de nuestro
+          servicio está diseñado para hacer que tu proceso de planificación sea
+          más fácil, único y ecológico.
         </p>
 
-        <CardBenefit
-          title="Ecológioco"
-          content="Uno de los beneficios más lindos y reponsables, es el hecho de ayudar al medio ambiente con Invitaciones Digitales al no tener la necesidad de recurrir a los antigüos procesos de impresión."
+        <Highlights client:only="react" deviceType="desktop" />
+
+        <!-- <CardBenefit
+          title="Conveniencia Moderna"
+          content="Experimenta la comodidad y ahorro de tiempo con nuestras <strong>invitaciones digitales para bodas</strong>, eliminando la necesidad de trámites físicos y acelerando el proceso de preparativos."
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -446,10 +622,9 @@ import Faqs from "../components/Faqs";
             ></path>
           </svg>
         </CardBenefit>
-
         <CardBenefit
-          title="Fácil y rápido"
-          content="Olvida los procesos complicados y tardados de encontrar un diseñador, mandar cambios, encontrar imprenta, mandar a imprimir, hazlo ahora y deste tu celular."
+          title="Gestión Eficiente de Confirmaciones"
+          content="Simplifica la planificación con la facilidad de envío y la capacidad de gestionar confirmaciones de asistencia de manera eficiente a través de nuestras <strong>invitaciones electrónicas de boda</strong>."
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -471,8 +646,127 @@ import Faqs from "../components/Faqs";
             ></path>
           </svg>
         </CardBenefit>
+        <CardBenefit
+          title="Relación Calidad-Precio"
+          content="Descubre la asequibilidad sin sacrificar calidad. Nuestras <strong>invitaciones digitales</strong> no tienen costos de impresión ni envío, permitiéndote ajustarte a tu presupuesto sin comprometer el estilo."
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-8 h-8 text-primary-400 mr-2"
+            slot="svg-icon"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M15.91 11.672a.375.375 0 010 .656l-5.603 3.113a.375.375 0 01-.557-.328V8.887c0-.286.307-.466.557-.327l5.603 3.112z"
+            ></path>
+          </svg>
+        </CardBenefit>
+        <CardBenefit
+          title="Diseño Personalizado Ilimitado"
+          content="Expresa tu estilo único con nuestra amplia gama de opciones de diseño personalizables. Cada pareja encuentra la invitación perfecta que refleja su personalidad."
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-8 h-8 text-primary-400 mr-2"
+            slot="svg-icon"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M15.91 11.672a.375.375 0 010 .656l-5.603 3.113a.375.375 0 01-.557-.328V8.887c0-.286.307-.466.557-.327l5.603 3.112z"
+            ></path>
+          </svg>
+        </CardBenefit>
+        <CardBenefit
+          title="Compromiso con la Sostenibilidad"
+          content="Celebra tu amor y cuida del planeta. Nuestras <strong>invitaciones digitales</strong> no solo son elegantes, sino también sostenibles, reduciendo el consumo de papel y minimizando el desperdicio."
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-8 h-8 text-primary-400 mr-2"
+            slot="svg-icon"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M15.91 11.672a.375.375 0 010 .656l-5.603 3.113a.375.375 0 01-.557-.328V8.887c0-.286.307-.466.557-.327l5.603 3.112z"
+            ></path>
+          </svg>
+        </CardBenefit>
+        <CardBenefit
+          title="Flexibilidad Total"
+          content="Adapta los detalles de tu boda con facilidad. Nuestras <strong>invitaciones digitales personalizadas</strong> ofrecen flexibilidad total, permitiendo cambios rápidos y actualizaciones según tus necesidades."
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-8 h-8 text-primary-400 mr-2"
+            slot="svg-icon"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M15.91 11.672a.375.375 0 010 .656l-5.603 3.113a.375.375 0 01-.557-.328V8.887c0-.286.307-.466.557-.327l5.603 3.112z"
+            ></path>
+          </svg>
+        </CardBenefit>
+        <CardBenefit
+          title="Alcance Internacional sin Límites"
+          content="Rompe fronteras con la ventaja de enviar <strong>invitaciones digitales</strong> a invitados internacionales. Evita retrasos en el envío y garantiza que todos reciban la información a tiempo, sin importar la distancia."
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-8 h-8 text-primary-400 mr-2"
+            slot="svg-icon"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M15.91 11.672a.375.375 0 010 .656l-5.603 3.113a.375.375 0 01-.557-.328V8.887c0-.286.307-.466.557-.327l5.603 3.112z"
+            ></path>
+          </svg>
+        </CardBenefit> -->
       </article>
-      <div>image</div>
     </section>
 
     <section
