Simple view transition integration

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,8 +67,8 @@ import Highlights from "../components/home/Highlights";
             >invitaciones virtuales para bodas</strong
           > de la más alta calidad. Nuestro compromiso con el <strong
             >diseño elegante</strong
-          > y la atención meticulosa a los detalles nos posiciona como líderes
-          en el mercado de <strong
+          > y la atención meticulosa a los detalles nos posiciona como líderes en
+          el mercado de <strong
             >invitaciones digitales elegantes para bodas</strong
           >. Personalizamos cada invitación para reflejar la individualidad de
           cada pareja.
