Add: Web Content and features

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -586,7 +586,7 @@ import Highlights from "../components/home/Highlights";
     </section>
 
     <section
-      class="container py-5 px-5 mt-10 mb-10 lg:m-auto xl:m-auto xl:w-11/12 xl:mt-12"
+      class="container py-5 px-5 mt-10 mb-10 lg:m-auto xl:m-auto xl:w-11/12 xl:mt-32"
     >
       <article class="md:flex md:flex-wrap md:justify-between">
         <h2 class="text-secondd-950 mb-5 lg:w-full lg:text-center">
@@ -781,7 +781,7 @@ import Highlights from "../components/home/Highlights";
           review="Nos fascino nuestra invitación, fue muy fácil de hacer, bastante económica versus las propuestas del método tradicional. Super recomendable!"
         />
         <CardReview
-          couple="Daniela y Daniel"
+          couple="Alicia y Daniel"
           review="El tiempo se nos vino encima, no teníamos tiempo de iniciar un proceso de Invitación Tradicional, y entonces llegamos a esta solución, Fantastico nos encanto la facilidad y rapidez."
         />
       </div>
