Add: Web Content to Planes and Wedding Planners Sections

--- a/src/pages/planes.astro
+++ b/src/pages/planes.astro
@@ -8,11 +8,19 @@ import FaqItem from "../components/FaqItem.astro";
   <section
     class="container py-5 px-5 md:flex md:flex-wrap md:justify-between lg:m-auto xl:m-auto xl:w-11/12 xl:mt-10"
   >
-    <article class="mb-6 lg:text-center xl:w-full xl:text-center">
+    <article class="mb-6 lg:text-center xl:w-full">
       <h1 class="text-secondd-950 uppercase">Nuestros Planes</h1>
       <p>
-        Contamos con 2 planes que cubren a la perfección desde tu necesidad más
-        básica hasta aquello que no imaginaste pudieses necesitar.
+        ¡Haz que tu celebración comience con una invitación que va más allá de
+        lo ordinario, reflejando tu estilo y valores de una manera única y
+        personalizada! Con Weddinvites, cada detalle cuenta en el viaje hacia tu
+        boda inolvidable.
+      </p>
+      <p>
+        Explora nuestros planes diseñados para adaptarse a tus necesidades y
+        descubre cómo nuestras <strong>invitaciones digitales</strong> pueden hacer
+        que el proceso de planificación sea más fácil y emocionante. ¡En Weddinvites,
+        no solo ofrecemos invitaciones; creamos momentos que durarán toda la vida!
       </p>
     </article>
     <Plan name="Plan Amor" pricing="0" label="Plan gratuito">
@@ -397,9 +405,8 @@ import FaqItem from "../components/FaqItem.astro";
     >
       <h3 class="text-primary-500 uppercase mb-2">Soy Wedding Planner</h3>
       <p class="mb-7">
-        Si eres <b>Wedding Planner</b> contamos con un plan de enfoque especial
-        para que puedas brindar un mejor servicio a través de nuestra
-        tecnología.
+        Si eres <b>Wedding Planner</b> contamos con un plan de enfoque especial para
+        que puedas brindar un mejor servicio a través de nuestra tecnología.
       </p>
       <a
         href="#"
@@ -410,6 +417,13 @@ import FaqItem from "../components/FaqItem.astro";
 
     <div class="w-full">
       <h3 class="text-center uppercase mb-5">Características de los Planes</h3>
+      <p class="text-center">
+        Descubre la innovación en invitaciones con Weddinvites. Nuestro servicio
+        te lleva más allá de lo convencional, ofreciéndote una experiencia única
+        en <strong>invitaciones digitales para bodas</strong>. Sumérgete en la
+        magia de Weddinvites y comienza un viaje que transformará la manera en
+        que invitas a tus seres queridos a tu día especial.
+      </p>
 
       <table class="min-w-full text-center text-sm font-light">
         <thead class="border-b font-medium dark:border-neutral-500">
