--- a/src/components/Plan.astro
+++ b/src/components/Plan.astro
@@ -8,11 +8,9 @@ interface Props {
 const { name, pricing, label } = Astro.props;
 ---
 
-<div
-  class="bg-secondd-100 border-solid border-2 border-secondd-300 py-5 px-5 rounded-md mb-6 md:w-[32%]"
->
-  <h3 class="text-secondd-500 uppercase mb-0">{name}</h3>
-  <b class="text-5xl mb-2 block text-secondd-950">${pricing}</b>
-  <span class="block mb-5 text-secondd-700 font-bold text-sm">{label}</span>
+<div class="bg-secondd-100 border-solid border-2 border-secondd-300 py-5 px-5 rounded-md mb-6 w-[48%]">
+  <h3 class="text-secondd-500 uppercase mb-0 text-center">{name}</h3>
+  <b class="text-5xl mb-2 block text-secondd-950 text-center">${pricing}</b>
+  <span class="block mb-5 text-secondd-700 font-bold text-sm text-center">{label}</span>
   <slot name="includes" />
 </div>
