Set de mejoras generales

--- a/src/components/CardReview.astro
+++ b/src/components/CardReview.astro
@@ -8,7 +8,7 @@ const { couple, review } = Astro.props;
 ---
 
 <article
-    class="border-solid border-2 border-secondd-300 rounded-md py-5 px-5 mb-5 lg:w-[48%]"
+    class="border-solid border-2 border-secondd-500 rounded-md py-5 px-5 mb-5 bg-white shadow-lg lg:w-[48%]"
 >
     <div class="flex mb-4">
         <svg
