--- a/src/components/Plan.astro
+++ b/src/components/Plan.astro
@@ -8,9 +8,13 @@ interface Props {
 const { name, pricing, label } = Astro.props;
 ---
 
-<div class="bg-secondd-100 border-solid border-2 border-secondd-300 py-5 px-5 rounded-md mb-6 w-[48%]">
+<div
+  class="bg-secondd-100 border-solid border-2 border-secondd-300 py-5 px-5 rounded-md mb-6"
+>
   <h3 class="text-secondd-500 uppercase mb-0 text-center">{name}</h3>
   <b class="text-5xl mb-2 block text-secondd-950 text-center">${pricing}</b>
-  <span class="block mb-5 text-secondd-700 font-bold text-sm text-center">{label}</span>
+  <span class="block mb-5 text-secondd-700 font-bold text-sm text-center"
+    >{label}</span
+  >
   <slot name="includes" />
 </div>
