--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,6 +1,6 @@
 <footer class="bg-secondd-300 py-5 px-5">
   <div
-    class="container flex flex-col lg:m-auto lg:flex-row lg:flex-wrap xl:m-auto xl:w-11/12 xl:mt-10"
+    class="container flex flex-col md:mx-auto lg:m-auto lg:flex-row lg:flex-wrap xl:m-auto xl:w-11/12 xl:mt-10"
   >
     <div class="mb-7 lg:w-1/2">
       <span class="block mb-3"
@@ -86,10 +86,10 @@
         </li>
         <li class="lg:basis-1/2"><a href="/">Contacto</a></li>
         <li class="lg:basis-1/2">
-          <a href="/">Preguntas Frecuentes</a>
+          <a href="/preguntas-frecuentes">Preguntas Frecuentes</a>
         </li>
         <li class="lg:basis-1/2">
-          <a href="/">Políticas de Privacidad</a>
+          <a href="/politicas-privacidad">Políticas de Privacidad</a>
         </li>
         <li class="lg:basis-1/2">
           <a href="/wedding-planer">Wedding Planer</a>
