--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,6 +1,6 @@
 <header class="lg:bg-secondd-300">
   <div
-    class="container flex flex-col relative lg:mx-auto lg:flex-row xl:w-11/12 xl:m-auto"
+    class="flex flex-col relative lg:mx-auto lg:flex-row xl:w-11/12 xl:m-auto"
   >
     <div
       class="w-full bg-secondd-300 py-1 px-5 flex justify-between items-center lg:w-1/4 lg:bg-transparent"
