--- a/src/pages/caracteristicas.astro
+++ b/src/pages/caracteristicas.astro
@@ -2,229 +2,97 @@
 import Layout from "../layouts/Layout.astro";
 import CardBenefit from "../components/CardBenefit.astro";
 import TopFeature from "../components/TopFeature.astro";
+import FeatureCard from "../components/FeatureCard.astro";
 ---
 
 <Layout title="Diseña tu Invitación Digital | Wedding Invites">
   <section
-    class="container py-5 px-5 md:flex md:flex-wrap md:justify-between lg:m-auto xl:m-auto xl:w-11/12 xl:mt-10"
+    class="container py-5 px-5 md:flex md:flex-wrap md:justify-between md:mx-auto lg:m-auto xl:m-auto xl:w-11/12 xl:mt-10"
   >
-    <article class="mb-20 lg:text-center xl:w-full xl:text-center">
+    <article class="mb-10 lg:text-center xl:w-full xl:text-center">
       <h1 class="text-secondd-950 uppercase text-4xl lg:text-5xl">
         CARACTERISTICAS
       </h1>
       <p class="mt-5">
-        Los beneficios de una <b>Invitación Digital</b> son infinitos; Sería
-        imposible ilustrarte cada uno de ellos pero resumimos de la mejor manera
-        las siguientes características
+        Los beneficios de una <b>Invitación Digital</b> son infinitos;<br
+        />Sería imposible ilustrarte cada uno de ellos pero resumimos de la
+        mejor manera las siguientes características.
       </p>
     </article>
 
-    <div class="mb-10 lg:flex lg:space-x-3">
-      <CardBenefit
+    <div class="grid grid-cols-1 gap-5 lg:grid-cols-3 mb-10">
+      <FeatureCard
         title="Fácil"
-        content="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim tenetur, asperiores consectetur laboriosam dolore nisi error aliquid neque! Culpa mollitia nisi quia a officiis odit ullam ipsum, tempora maxime suscipit?"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="w-8 h-8 text-primary-400 mr-2"
-          slot="svg-icon"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
-          ></path>
-        </svg>
-      </CardBenefit>
-      <CardBenefit
+        content="La facilidad de uso es uno de los estandartes de la tecnología y justo eso hacemos, esto es realmente fácil."
+        icon="buena-resena.png"
+      />
+      <FeatureCard
         title="Rápido"
-        content="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim tenetur, asperiores consectetur laboriosam dolore nisi error aliquid neque! Culpa mollitia nisi quia a officiis odit ullam ipsum, tempora maxime suscipit?"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="w-8 h-8 text-primary-400 mr-2"
-          slot="svg-icon"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z"
-          ></path>
-        </svg>
-      </CardBenefit>
-      <CardBenefit
+        content="Todo sucede en tiempo real, no existen intermediarios ni procesos de autorización, carga y visualiza."
+        icon="subiendo.png"
+      />
+      <FeatureCard
         title="Ecológico"
-        content="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim tenetur, asperiores consectetur laboriosam dolore nisi error aliquid neque! Culpa mollitia nisi quia a officiis odit ullam ipsum, tempora maxime suscipit?"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="w-8 h-8 text-primary-400 mr-2"
-          slot="svg-icon"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M6.115 5.19l.319 1.913A6 6 0 008.11 10.36L9.75 12l-.387.775c-.217.433-.132.956.21 1.298l1.348 1.348c.21.21.329.497.329.795v1.089c0 .426.24.815.622 1.006l.153.076c.433.217.956.132 1.298-.21l.723-.723a8.7 8.7 0 002.288-4.042 1.087 1.087 0 00-.358-1.099l-1.33-1.108c-.251-.21-.582-.299-.905-.245l-1.17.195a1.125 1.125 0 01-.98-.314l-.295-.295a1.125 1.125 0 010-1.591l.13-.132a1.125 1.125 0 011.3-.21l.603.302a.809.809 0 001.086-1.086L14.25 7.5l1.256-.837a4.5 4.5 0 001.528-1.732l.146-.292M6.115 5.19A9 9 0 1017.18 4.64M6.115 5.19A8.965 8.965 0 0112 3c1.929 0 3.716.607 5.18 1.64"
-          ></path>
-        </svg>
-      </CardBenefit>
-    </div>
-
-    <div class="flex flex-col space-y-8 mb-10">
-      <TopFeature
-        title="Auto Gestionable"
-        content="Lorem ipsum dolor sit amet, consectetur adipisicing  elit. Rem atque porro corrupti voluptatum velit nobis dignissimos excepturi quibusdam eligendi. Veniam sed harum perferendis aspernatur voluptates quaerat? Praesentium perferendis modi atque?"
-        thumb="/feature-demo.svg"
-      />
-
-      <TopFeature
-        title="Gestión de Invitados"
-        content="Lorem ipsum dolor sit amet, consectetur adipisicing  elit. Rem atque porro corrupti voluptatum velit nobis dignissimos excepturi quibusdam eligendi. Veniam sed harum perferendis aspernatur voluptates quaerat? Praesentium perferendis modi atque?"
-        thumb="/feature-demo.svg"
-      />
-
-      <TopFeature
-        title="Mesa de Regalo"
-        content="Lorem ipsum dolor sit amet, consectetur adipisicing  elit. Rem atque porro corrupti voluptatum velit nobis dignissimos excepturi quibusdam eligendi. Veniam sed harum perferendis aspernatur voluptates quaerat? Praesentium perferendis modi atque?"
-        thumb="/feature-demo.svg"
+        content="En busca de 0 papel, no importa que idelogía persigas, 0 papel seguro es el plan perfecto para un invitación."
+        icon="pantalla-tactil.png"
       />
     </div>
 
-    <div class="lg:flex lg:space-x-3">
-      <CardBenefit
-        title="Fácil"
-        content="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim tenetur, asperiores consectetur laboriosam dolore nisi error aliquid neque! Culpa mollitia nisi quia a officiis odit ullam ipsum, tempora maxime suscipit?"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="w-8 h-8 text-primary-400 mr-2"
-          slot="svg-icon"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
-          ></path>
-        </svg>
-      </CardBenefit>
-      <CardBenefit
-        title="Rápido"
-        content="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim tenetur, asperiores consectetur laboriosam dolore nisi error aliquid neque! Culpa mollitia nisi quia a officiis odit ullam ipsum, tempora maxime suscipit?"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="w-8 h-8 text-primary-400 mr-2"
-          slot="svg-icon"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z"
-          ></path>
-        </svg>
-      </CardBenefit>
-      <CardBenefit
-        title="Ecológico"
-        content="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim tenetur, asperiores consectetur laboriosam dolore nisi error aliquid neque! Culpa mollitia nisi quia a officiis odit ullam ipsum, tempora maxime suscipit?"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="w-8 h-8 text-primary-400 mr-2"
-          slot="svg-icon"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M6.115 5.19l.319 1.913A6 6 0 008.11 10.36L9.75 12l-.387.775c-.217.433-.132.956.21 1.298l1.348 1.348c.21.21.329.497.329.795v1.089c0 .426.24.815.622 1.006l.153.076c.433.217.956.132 1.298-.21l.723-.723a8.7 8.7 0 002.288-4.042 1.087 1.087 0 00-.358-1.099l-1.33-1.108c-.251-.21-.582-.299-.905-.245l-1.17.195a1.125 1.125 0 01-.98-.314l-.295-.295a1.125 1.125 0 010-1.591l.13-.132a1.125 1.125 0 011.3-.21l.603.302a.809.809 0 001.086-1.086L14.25 7.5l1.256-.837a4.5 4.5 0 001.528-1.732l.146-.292M6.115 5.19A9 9 0 1017.18 4.64M6.115 5.19A8.965 8.965 0 0112 3c1.929 0 3.716.607 5.18 1.64"
-          ></path>
-        </svg>
-      </CardBenefit>
+    <article class="w-full text-center mb-20">
+      <h3 class="text-secondd-500 mb-5 uppercase">Autogestionable</h3>
+      <p class="text-center lg:w-[80%] lg:mx-auto">
+        Olvida los procesos manuales que toman mucho tiempo, deja de enviar y
+        solicitar cambios para tu invitación que tardan horas o días en
+        reflejarse, mejor gestiona tu invitación de forma personalizada cuando y
+        desde donde quieras.
+      </p>
+      <img
+        src="/auto-gestionable.jpg"
+        alt=""
+        class="mx-auto mt-10 shadow-xl rounded-md border-2 border-secondd-300 lg:w-2/3"
+      />
+    </article>
+
+    <div class="grid grid-cols-1 gap-5 lg:grid-cols-2 mb-20">
+      <article class="text-center mb-10">
+        <h4 class="text-secondd-500 mb-5 uppercase">Diseño Personalizado</h4>
+        <p>
+          Utiliza tus colores, fuentes, imagenes y personaliza tu invitación con
+          diseños personalizados para darle ese toque único con el que debe
+          contar una invitación de boda.
+        </p>
+        <img
+          src="/diseno-personalizado.jpg"
+          alt=""
+          class="mx-auto mt-10 shadow-xl rounded-md border-2 border-secondd-300 lg:w-2/3"
+        />
+      </article>
+      <article class="text-center mb-10">
+        <h4 class="text-secondd-500 mb-5 uppercase">Cambios Ilimitados</h4>
+        <p>
+          Realiza la cantidad de cambios que necesites a tu invitación digital,
+          sin restricciones ni cuotas de uso, modifica y comparte tu invitación
+          todas las veces que necesites.
+        </p>
+        <img
+          src="/auto-gestionable.jpg"
+          alt=""
+          class="mx-auto mt-10 shadow-xl rounded-md border-2 border-secondd-300 lg:w-2/3"
+        />
+      </article>
     </div>
-    <div class="lg:flex lg:space-x-3">
-      <CardBenefit
-        title="Fácil"
-        content="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim tenetur, asperiores consectetur laboriosam dolore nisi error aliquid neque! Culpa mollitia nisi quia a officiis odit ullam ipsum, tempora maxime suscipit?"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="w-8 h-8 text-primary-400 mr-2"
-          slot="svg-icon"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
-          ></path>
-        </svg>
-      </CardBenefit>
-      <CardBenefit
-        title="Rápido"
-        content="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim tenetur, asperiores consectetur laboriosam dolore nisi error aliquid neque! Culpa mollitia nisi quia a officiis odit ullam ipsum, tempora maxime suscipit?"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="w-8 h-8 text-primary-400 mr-2"
-          slot="svg-icon"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z"
-          ></path>
-        </svg>
-      </CardBenefit>
-      <CardBenefit
-        title="Ecológico"
-        content="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim tenetur, asperiores consectetur laboriosam dolore nisi error aliquid neque! Culpa mollitia nisi quia a officiis odit ullam ipsum, tempora maxime suscipit?"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="w-8 h-8 text-primary-400 mr-2"
-          slot="svg-icon"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M6.115 5.19l.319 1.913A6 6 0 008.11 10.36L9.75 12l-.387.775c-.217.433-.132.956.21 1.298l1.348 1.348c.21.21.329.497.329.795v1.089c0 .426.24.815.622 1.006l.153.076c.433.217.956.132 1.298-.21l.723-.723a8.7 8.7 0 002.288-4.042 1.087 1.087 0 00-.358-1.099l-1.33-1.108c-.251-.21-.582-.299-.905-.245l-1.17.195a1.125 1.125 0 01-.98-.314l-.295-.295a1.125 1.125 0 010-1.591l.13-.132a1.125 1.125 0 011.3-.21l.603.302a.809.809 0 001.086-1.086L14.25 7.5l1.256-.837a4.5 4.5 0 001.528-1.732l.146-.292M6.115 5.19A9 9 0 1017.18 4.64M6.115 5.19A8.965 8.965 0 0112 3c1.929 0 3.716.607 5.18 1.64"
-          ></path>
-        </svg>
-      </CardBenefit>
+
+    <div class="w-full text-center">
+      <h4 class="text-secondd-500 mb-5 uppercase">Y mucho más...</h4>
+      <p class="lg:w-[80%] lg:mx-auto">
+        La cantidad de características y beneficios que tiene una invitación
+        digital hace imposible notarle algún punto negativo a nuestra solución
+        donde todo es beneficio.
+      </p>
+
+      <div>
+        <img src="/more-features.png" alt="" class="mx-auto" />
+      </div>
     </div>
   </section>
 </Layout>
