--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,9 +8,10 @@ interface Props {
 }
 
 const { title } = Astro.props;
+const currentLang = Astro.currentLocale
 ---
 
-<html lang="en">
+<html lang={Astro.currentLocale}>
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
@@ -28,7 +29,7 @@ const { title } = Astro.props;
 		/>
 	</head>
 	<body>
-		<Header />
+		<Header languagesList={Astro.preferredLocaleList} currentLang={currentLang} />
 		<slot />
 		<Footer />
 	</body>
